--- a/app/views/users/_support_duty.html.erb
+++ b/app/views/users/_support_duty.html.erb
@@ -1,5 +1,5 @@
 <!-- add css for color -->
-<tr class="#{duty.state}-support-duty">
+<tr class="<%= duty.state %>-support-duty">
   <!-- refactor this, and use strftime for date -->
   <td><%= duty.assigned_at.to_date %></td>
   <% if duty.active? %>
